applications/gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api
  labels:
    name: gateway-api
