applications/gateway-api/default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: gateway-api
spec:
  gatewayClassName: nginx
  listeners:
  - name: grafana
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: gateway-api
spec:
  parentRefs:
  - name: gateway-api
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /grafana
    backendRefs:
    - name: kube-prometheus-stack-grafana
      namespace: default
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-grafana-from-gateway-api
  namespace: default
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gateway-api
  to:
  - group: ""
    kind: Service
    name: kube-prometheus-stack-grafana
